Fixed slogan stretching on mobile

--- a/source/sass/elements/_slogan.scss
+++ b/source/sass/elements/_slogan.scss
@@ -10,6 +10,7 @@ Styleguide 3.11
 */
 
 .slogan {
+    &,
     .slogan--large & {
         @include breakpoint($lt-large-handheld) {
             height: auto;
